Fix path to resource data was wrong and Add logback